init auth
