# user/docs/swagger.json
@@ -13,34 +13,11 @@
         "version": "1.0"
     },
     "host": "127.0.0.1:8080",
-    "basePath": "/api",
+    "basePath": "/api/user",
     "paths": {
-        "/": {
-            "get": {
-                "description": "Hello World",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Hello World"
-                ],
-                "summary": "Hello World",
-                "responses": {
-                    "200": {
-                        "description": "Hello, World!",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/user/register/admin": {
+        "/create": {
             "post": {
-                "description": "create an admin account, who can login by username and password",
+                "description": "create an user account, who can log in by username and password",
                 "consumes": [
                     "application/json"
                 ],
@@ -48,9 +25,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "admin"
+                    "user"
                 ],
-                "summary": "Admin Register",
+                "summary": "create user api (should be admin now)",
                 "parameters": [
                     {
                         "description": "body",
@@ -64,9 +41,9 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Hello, World!",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/user_model.UserCreateResponse"
                         }
                     }
                 }
@@ -78,24 +55,63 @@
             "type": "object",
             "required": [
                 "email",
-                "id",
                 "name",
-                "password"
+                "password",
+                "type"
             ],
             "properties": {
                 "email": {
-                    "type": "string"
-                },
-                "id": {
+                    "description": "email",
                     "type": "string"
                 },
                 "name": {
+                    "description": "name",
                     "type": "string"
                 },
                 "password": {
+                    "description": "password",
                     "type": "string"
+                },
+                "type": {
+                    "description": "使用者類型 (一般使用者, 管理者)",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/user_model.UserType"
+                        }
+                    ]
                 }
             }
+        },
+        "user_model.UserCreateResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "description": "user id (uid in this system)",
+                    "type": "string"
+                },
+                "message": {
+                    "description": "error message",
+                    "type": "string"
+                },
+                "result": {
+                    "description": "true: success, false: error",
+                    "type": "boolean"
+                }
+            }
+        },
+        "user_model.UserType": {
+            "type": "string",
+            "enum": [
+                "normal",
+                "admin"
+            ],
+            "x-enum-comments": {
+                "Normal": "一般使用者"
+            },
+            "x-enum-varnames": [
+                "Normal",
+                "Admin"
+            ]
         }
     }
 }
